Bug 394689. Cannot use setCaretOffset() to position caret at end of HTML entry. r=david.bolter, a=dsicore